
	mbaff:
		Fixes for Sparc systems.
		Fix for large filebases, could not run longer then 10 minutes.

	mbindex:
		Fixes for Sparc systems.

	mbdiff:
		Fixes for Sparc systems.

	mbfbgen:
		Obsolete and removed from the distribution. The function is
		now in mbfile.

	fbutil:
		Removed from the distribution. Thanks to Johannes Lundberg,
		2:206/149@fidonet to let us use his program until mbfile could
		take over.



v0.33.20        10-Feb-2002

	upgrade:
		Compile sources and install binaries. Restart the BBS.
		Enter mbsetup, this will upgrade the databases.

	general:
		Added structures for area maintenance with area lists.


	common.a:
		Added 2 functions to return the OS name and CPU family.
		Added a function to return the right tearline.
		Added support for ext3 filesystem in diskspace check.

	mbsetup:
		In message groups added default settings for auto area
		creation.
		Added servicename filemgr to the filemgr services.
		When adding or deleting a message area, several extra checks
		are done.
		Layout for message area editor changed, more logical now.

	mbfido:
		In AreaMgr and FileMgr changed aka matching for area 
		connections. Code cleanups.
		In FileMgr when %tick=on/off command was received, mbfido
		crashed.
		Implemented auto area create comparing a new received echo
		from a uplink which has a echomail taglist in one of the
		mailgroups defined. The area is created with the defaults
		from the mailgroup.
		If mbfido fails to unzip a incoming mailarchive, a second
		attempt is done after a sync() and one second delay. This
		seems to be a kernel flush problem.

	mball:
		Will not crash anymore when it needs more then 10 minutes to
		create the allfiles and newfiles lists.

	mbtask:
		Removed some debug logging.

	mbcico:
		Fixed binkp driver to accept incoming unprotected sessions.

	mbsebbs:
		On some systems the download taglists contained garbage after
		the short filename causing wrong filenames at the users side.
